WIP: Bitvector arithmetic